# challenge-instance-controller

./: .dockerignore  .envrc  .gitignore  .releaserc  .releaserc.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  REFACTORING_NOTES.md  berg-logs.txt  challenge-instance-controller-spec.md  deny.toml  devenv.nix  devenv.yaml  flake.nix
.github/actions/setup/: action.yml
.github/workflows/: ci.yaml  devenv.yaml  integration-tests.yaml  release.yaml  tests.yaml
charts/berg-controller/: Chart.yaml  values.yaml
charts/berg-controller/templates/: NOTES.txt  _helpers.tpl  challengeinstanceclass.yaml  clusterrole.yaml  rbac-manager.yaml  serviceaccount.yaml
charts/berg-operator/: Chart.yaml  values.yaml
charts/berg-operator/templates/: NOTES.txt  _helpers.tpl  challenge-ns-role.yaml  challengeinstanceclass.yaml  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  kyverno-policy.yaml  rbac-manager.yaml  serviceaccount.yaml
crds/: crd.yaml
e2e/all-berg-challenges/: README.md  test-chall.sh  test.sh
e2e/basic/: chainsaw-test.yaml  challenge.yaml  instance.yaml
examples/nginx/: challenge-instance-class.yaml  challenge-instance.yaml  challenge.yaml
src/: config.rs  date_time.rs  error.rs  lib.rs  main.rs  telemetry.rs  utils.rs
src/controller/: config.rs  error.rs  mod.rs  reconcile.rs
src/crd/: challenge.rs  challenge_instance.rs  mod.rs
src/crd/v1/: challenge.rs  challenge_attachment.rs  challenge_container.rs  challenge_port.rs  challenge_port_type.rs  dynamic_content_flag.rs  dynamic_env_flag.rs  dynamic_executable_flag.rs  dynamic_flag.rs  mod.rs  page.rs
src/crds/: challenge.rs  challenge_instance.rs  challenge_instance_class.rs  cilium.rs  gateway.rs  mod.rs
src/flag/: content.rs  entropy.rs  env.rs  executable.rs  mod.rs
src/reconciler/: finalizer.rs  mod.rs  state.rs  timeout.rs
src/resources/: configmap.rs  deployment.rs  gateway.rs  labels.rs  mod.rs  namespace.rs  network_policy.rs  pdb.rs  service.rs
tests/: integration.sh
tests/fixtures/: test-challenge.yaml  test-instance-class.yaml  test-instance.yaml
tests/integration/: README.md  run-tests.sh  setup-kind.sh  teardown-kind.sh
