[package]
name = "berg-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
config = "0.15.6"
futures = "0.3.31"
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0", features = ["runtime", "derive", "admission"] }
schemars = "0.8.21"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
