[package]
name = "berg-operator"
version = "0.1.0"
edition = "2021"
default-run = "berg-operator"

[[bin]]
name = "berg-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[lib]
name = "berg_operator"
path = "src/lib.rs"

[dependencies]
# Kubernetes client and runtime
kube = { version = "0.97", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.23", features = ["v1_31", "schemars"] }
kube-runtime = "0.97"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = "0.8"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Random for entropy
rand = "0.8"
gateway-api = { version = "0.19", features = ["experimental"] }

[dev-dependencies]
tower-test = "0.4"
